# text-rope

./: .hlint.yaml  README.md  cabal.haskell-ci  changelog.md  text-rope.cabal
.github/workflows/: emulated.yml  haskell-ci.yml
bench/: Main.hs  bench-utf8.txt
cbits/: utils.c
src/Data/Text/: Lines.hs  Rope.hs
src/Data/Text/Lines/: Internal.hs
src/Data/Text/Mixed/: Rope.hs
src/Data/Text/Utf16/: Lines.hs  Rope.hs
src/Data/Text/Utf16/Rope/: Mixed.hs
src/Data/Text/Utf8/: Lines.hs  Rope.hs
test/: CharLines.hs  CharRope.hs  Main.hs  MixedRope.hs  Utf16Lines.hs  Utf16Rope.hs  Utf8Lines.hs  Utf8Rope.hs  Utils.hs
