name: text-rope
version: 0.2
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2021-2022 Andrew Lelechenko
maintainer: Andrew Lelechenko <andrew.lelechenko@gmail.com>
homepage: https://github.com/Bodigrim/text-rope
category: Text
synopsis: Text lines and ropes
description:
  A wrapper around `Text` for fast line/column navigation and logarithmic concatenation.
author: Andrew Lelechenko <andrew.lelechenko@gmail.com>
extra-source-files:
  changelog.md
  README.md
data-files:
  bench/bench.txt

tested-with: GHC == 9.2.2, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2

source-repository head
  type: git
  location: git://github.com/Bodigrim/text-rope.git

flag debug
  default: False
  manual: True
  description: Build library with sanity checks enabled.

library
  exposed-modules:
    Data.Text.Lines
    Data.Text.Rope
    Data.Text.Utf16.Lines
    Data.Text.Utf16.Rope
    Data.Text.Utf16.Rope.Mixed
  other-modules:
    Data.Text.Lines.Internal
  build-depends:
    base >=4.9 && <5,
    deepseq,
    text >= 1.2.3,
    vector >=0.11
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -O2 -Wall -Wcompat -fexpose-all-unfoldings
  if flag(debug)
    cpp-options: -DDEBUG
    if impl(ghc >= 9.2.2)
      ghc-options: -fcheck-prim-bounds
  c-sources:
    cbits/utils.c

test-suite text-rope-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    CharLines
    CharRope
    MixedRope
    Utf16Lines
    Utf16Rope
    Utils
  build-depends:
    base,
    text-rope,
    tasty,
    tasty-quickcheck,
    text
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts -Wcompat "-with-rtsopts -N"

benchmark text-rope-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Paths_text_rope
  hs-source-dirs: bench
  ghc-options: -O2 -rtsopts
  build-depends:
    base,
    -- core-text,
    text-rope,
    random,
    -- yi-rope,
    -- rope-utf16-splay,
    tasty-bench >= 0.3,
    text
  default-language: Haskell2010
